Add Lab 1 Images to index file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 <h2>Updates</h2>
 <ul id="updates">
 <li>Week 1: Initial setup completed!</li>
+
+``` HTML
+<img src="Blink_SS.png" alt="Blink Screenshot" width="300">
+```
+``` HTML
+<img src="Buzzer_SS.png" alt="Buzzer Screenshot" width="300">
+```
+``` HTML
+<img src="Datalogger_SS.png" alt="Datalogger Screenshot" width="300">
+```
+``` HTML
+<img src="HighLevelExample_SS.png" alt="High Level Example Screenshot" width="300">
+```
+``` HTML
+<img src="OLED_SS.png" alt="OLED Screenshot" width="300">
+```
+``` HTML
+<img src="PDMSerialPlotter_SS.png" alt="PDM Serial Plotter Screenshot" width="300">
+```
+``` HTML
+<img src="simple_SS.png" alt="simple Screenshot" width="300">
+```
+
 </ul>
 </body>
 </html>
