--- a/index.html
+++ b/index.html
@@ -13,27 +13,20 @@
 <ul id="updates">
 <li>Week 1: Initial setup completed!</li>
 
-``` HTML
+<li>Blink</li>
 <img src="Blink_SS.png" alt="Blink Screenshot" width="300">
-```
-``` HTML
-<img src="Buzzer_SS.png" alt="Buzzer Screenshot" width="300">
-```
-``` HTML
-<img src="Datalogger_SS.png" alt="Datalogger Screenshot" width="300">
-```
-``` HTML
+<li>IMU</li>
 <img src="HighLevelExample_SS.png" alt="High Level Example Screenshot" width="300">
-```
-``` HTML
-<img src="OLED_SS.png" alt="OLED Screenshot" width="300">
-```
-``` HTML
+<li>Microphone</li>
 <img src="PDMSerialPlotter_SS.png" alt="PDM Serial Plotter Screenshot" width="300">
-```
-``` HTML
+<li>OLED</li>
+<img src="OLED_SS.png" alt="OLED Screenshot" width="300">
+<li>MicroSD Card</li>
+<img src="Datalogger_SS.png" alt="Datalogger Screenshot" width="300">
+<li>RTC</li>
 <img src="simple_SS.png" alt="simple Screenshot" width="300">
-```
+<li>Buzzer</li>
+<img src="Buzzer_SS.png" alt="Buzzer Screenshot" width="300">
 
 </ul>
 </body>
