--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 <li>Week 1: Initial setup completed!</li>
 
 <li>Blink</li>
-<img src="Blink_SS.png" alt="Blink Screenshot" width="300">
+<img src="Lab1/Screenshots/Blink_SS.png" alt="Blink Screenshot" width="300">
 <li>IMU</li>
-<img src="HighLevelExample_SS.png" alt="High Level Example Screenshot" width="300">
+<img src="Lab1/Screenshots/HighLevelExample_SS.png" alt="High Level Example Screenshot" width="300">
 <li>Microphone</li>
-<img src="PDMSerialPlotter_SS.png" alt="PDM Serial Plotter Screenshot" width="300">
+<img src="Lab1/Screenshots/PDMSerialPlotter_SS.png" alt="PDM Serial Plotter Screenshot" width="300">
 <li>OLED</li>
-<img src="OLED_SS.png" alt="OLED Screenshot" width="300">
+<img src="Lab1/Screenshots/OLED_SS.png" alt="OLED Screenshot" width="300">
 <li>MicroSD Card</li>
-<img src="Datalogger_SS.png" alt="Datalogger Screenshot" width="300">
+<img src="Lab1/Screenshots/Datalogger_SS.png" alt="Datalogger Screenshot" width="300">
 <li>RTC</li>
-<img src="simple_SS.png" alt="simple Screenshot" width="300">
+<img src="Lab1/Screenshots/simple_SS.png" alt="simple Screenshot" width="300">
 <li>Buzzer</li>
-<img src="Buzzer_SS.png" alt="Buzzer Screenshot" width="300">
+<img src="Lab1/Screenshots/Buzzer_SS.png" alt="Buzzer Screenshot" width="300">
 
 </ul>
 </body>
