input second week screenshots

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <p>This website documents my project progress.</p>
 <h2>Updates</h2>
 <ul id="updates">
+
+<li>Week 2: Data Logger</li>
+<li>With SD Card Init</li>
+<img src="Lab2/Screenshots/SD Card Fail.png" alt="SD Card Init Fail" width="300">
+<li>Without SD Card Init</li>
+<img src="Lab2/Screenshots/SD Card Init Commented Out.png" alt="SD Card Write" width="300">
+
+
 <li>Week 1: Initial setup completed!</li>
 
 <li>Blink</li>
@@ -18,7 +26,7 @@
 <li>IMU</li>
 <img src="Lab1/Screenshots/HighLevelExample_SS.png" alt="High Level Example Screenshot" width="300">
 <li>Microphone</li>
-<img src="Lab1/Screenshots/PDMSerialPlotter_SS.png" alt="PDM Serial Plotter Screenshot" width="300">
+<img src="Lab1/SHighLevelExample_SScreenshots/PDMSerialPlotter_SS.png" alt="PDM Serial Plotter Screenshot" width="300">
 <li>OLED</li>
 <img src="Lab1/Screenshots/OLED_SS.png" alt="OLED Screenshot" width="300">
 <li>MicroSD Card</li>
