--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 <h2>Updates</h2>
 <ul id="updates">
 
+<li>Week 4: Activity Tracker Schematic</li>
+<li>Activity Tracker Schematic</li>
+<img src="Lab3/Screenshots/ActivityTracker_Sch.png" alt="Activity Tracker Schematic" width="300">
+
 <li>Week 2: Data Logger</li>
 <li>With SD Card Init</li>
 <img src="Lab2/Screenshots/SD Card Fail.png" alt="SD Card Init Fail" width="300">
 <li>Without SD Card Init</li>
 <img src="Lab2/Screenshots/SD Card Init Commented Out.png" alt="SD Card Write" width="300">
 
-
 <li>Week 1: Initial setup completed!</li>
-
 <li>Blink</li>
 <img src="Lab1/Screenshots/Blink_SS.png" alt="Blink Screenshot" width="300">
 <li>IMU</li>
