add Lab2 updates to index

--- a/index.html
+++ b/index.html
@@ -12,17 +12,25 @@
 <h2>Updates</h2>
 <ul id="updates">
 
-<li>Week 4: Activity Tracker Schematic</li>
+<h2>Week 4: Activity Tracker Schematic</h2>
 <li>Activity Tracker Schematic</li>
 <img src="Lab3/Screenshots/ActivityTracker_Sch.png" alt="Activity Tracker Schematic" width="300">
 
-<li>Week 2: Data Logger</li>
+<h2>Week 2: Data Logger</h2>
 <li>With SD Card Init</li>
 <img src="Lab2/Screenshots/SD Card Fail.png" alt="SD Card Init Fail" width="300">
 <li>Without SD Card Init</li>
 <img src="Lab2/Screenshots/SD Card Init Commented Out.png" alt="SD Card Write" width="300">
+<li>Not Logging Measurements</li>
+<img src="Lab2/Screenshots/NoLogging.jpg" alt="Not Logging Measurements" width="300">
+<li>Logging Measurements</li>
+<img src="Lab2/Screenshots/Logging.jpg" alt="Logging Measurements" width="300">
+<li>Calculations and Writeup</li>
+<img src="Lab2/Screenshots/Calculations.png" alt="Calculations" width="300">
+<li>For some reason it appears that writing to the SD card uses less power on average. This has been the case over multiple attempts. My only guess is that it is because reading from the IMU uses more energy than writing to the SD card.</li>
+<li>Videos available upon request and were too large to push to git</li>
 
-<li>Week 1: Initial setup completed!</li>
+<h2>Week 1: Initial setup completed!</h2>
 <li>Blink</li>
 <img src="Lab1/Screenshots/Blink_SS.png" alt="Blink Screenshot" width="300">
 <li>IMU</li>
